Update failing tests after merge